@@ -5,8 +5,9 @@ devscripts (2.8.15) UNRELEASED; urgency=low
   * debchange: debian/NEWS.Debian should have been debian/NEWS (closes:
     #303886)
   * uscan: handle annoying error message (closes: #303607)
+  * wnpp-alert: accept -h and -v short options (closes: #304240)
 
- -- Julian Gilbey <jdg@polya.uklinux.net>  Thu,  7 Apr 2005 20:21:23 +0100
+ -- Julian Gilbey <jdg@polya.uklinux.net>  Tue, 12 Apr 2005 11:46:36 +0100
 
 devscripts (2.8.14) unstable; urgency=low
 
